[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "normatrix"
version = "0.3.4"
authors = [ {name = "Saverio", email = "personnex976@gmail.com"} ]
readme = "README.md"
description = "check epitech c coding style"
keywords = [ "epitech", "coding style", "c", "normatrix" ]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: C",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [ "markdown", "regex", "rich" ]

[tool.setuptools.packages.find]
where = [ "src" ]
include = [ "normatrix*" ]
