[metadata]
name = normatrix
version = 0.1.6
author = Saverio
author_email = personnex976@gmail.com
decription = check epitech c coding style
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Saverio976/NorMatrix
project_urls =
	Bug Tracker = https://github.com/Saverio976/NorMatrix/issues/new/choose
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Environment :: Console
	Programming Language :: C
	Topic :: Software Development :: Quality Assurance

[options]
package_dir =
	= normatrix
packages = find:
python_requires = >=3.6

[options.packages.find]
where = normatrix
