[metadata]
name = normatrix
version = 0.2.3
author = Saverio
author_email = personnex976@gmail.com
description = check epitech c coding style
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Saverio976/NorMatrix
project_urls =
	Bug Tracker = https://github.com/Saverio976/NorMatrix/issues/new/choose
	Example Workflow = https://github.com/Saverio976/NorMatrix/actions/workflows/normatrix_check.yml
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Environment :: Console
	Programming Language :: C
	Topic :: Software Development :: Quality Assurance

[options]
package_dir =
	= normatrix
packages = find:
python_requires = >=3.6

[options.packages.find]
where = normatrix
